--- a/style.css
+++ b/style.css
@@ -323,7 +323,7 @@ nav .fa {
   }
   .nav-links {
     position: absolute;
-    min-height: 100%;
+    height: 100vmax;
     width: 200px;
     top: 0;
     right: -200px;
@@ -331,6 +331,8 @@ nav .fa {
     z-index: 2;
     background: rgb(1, 33, 92);
     transition: 1s;
+    scroll-behavior: smooth;
+    scroll-snap-align: start end;
   }
   .text-box h1 {
     font-size: 50px;
